milestone-3( added button functionality )

--- a/index.html
+++ b/index.html
@@ -24,12 +24,7 @@
             <h1 class="text-center">Carousel</h1>
             <div class="carousel-wrapper">
               <div class="carousel-image active">
-                <img id="slide" src="" alt="" />
-                <img src="" alt="" />
-                <img src="" alt="" />
-                <img src="" alt="" />
-                <img src="" alt="" />
-                <img src="" alt="" />
+                <img class="ms-img" id="slide" src="" alt="" />
               </div>
               <div class="carousel-navigation">
                 <button class="btn btn-primary" id="previous-button">
