--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- bootstrap -->
-    <!-- JavaScript Bundle with Popper -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
       crossorigin="anonymous"
-    ></script>
+    />
     <!-- css -->
     <link rel="stylesheet" href="style.css" />
 
@@ -23,10 +23,11 @@
           <div class="col-12">
             <h1 class="text-center">Carousel</h1>
             <div class="carousel-wrapper">
-              <div class="carousel-image active">
-                <img class="ms-img" id="slide" src="" alt="" />
+              <div class="carousel-image">
+                <!-- put active in the class and display none as default -->
+                <img class="" id="slide" src="" alt="" />
               </div>
-              <div class="carousel-navigation">
+              <div class="carousel-navigation p-3">
                 <button class="btn btn-primary" id="previous-button">
                   Previous
                 </button>
