--- a/index.html
+++ b/index.html
@@ -39,5 +39,6 @@
       </div>
     </main>
   </body>
-  <script src="main.js"></script>
+  <!-- <script src="main.js"></script> -->
+  <script src="script.js"></script>
 </html>
